<resources>
    <string name="app_name" translatable="false">Color Dropper</string>
    <string name="fragment1">Color Picker</string>
    <string name="fragment2">Favorite Colors</string>
    <string name="tab_titles">Color Picker,Favorite Colors</string>
    <string name="def_color">#00000000</string>
    <string name="app_icon">App Icon</string>
    <string name="imgView">Image Preview</string>
    <string name="iv_browse">Browse Gallery</string>
    <string name="iv_web">Enter image web address</string>
    <string name="iv_camera">Take a picture</string>
    <string name="iv_screenshot">Take a screenshot</string>
    <string name="title_activity_color_information">Color Information</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="mode_selection">Mode Selection</string>
    <string name="browse_for_image">Browse For Image</string>
    <string name="blank_image">Blank Image</string>
    <string name="title_placeholder">Title Placeholder</string>
    <string name="dialog_icon">Dialog Icon</string>
    <string name="temporary_message">Temporary Message</string>
    <string name="enter_your_input">Enter your input...</string>
    <string name="input_dialog_default_text">Enter some text.</string>
    <string name="favorites_list_is_empty">Favorites List Is Empty</string>
    <string name="there_are_currently_no_favorite_colors_please_add_a_few">There are currently no favorite colors. Please add a few.</string>
    <string name="there_is_no_image_loaded">There is no image loaded.</string>

</resources>
