<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    >
<!--    <ImageView-->
<!--        android:id="@+id/imageViewDialogIcon"-->
<!--        android:layout_width="32dp"-->
<!--        android:layout_height="32dp"-->
<!--        android:src=""-->
<!--        android:scaleType="fitCenter"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:contentDescription="@string/dialog_icon" />-->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/title_placeholder"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        />
    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        android:text="@string/temporary_message"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <EditText
        android:id="@+id/textViewUserInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_input"
        app:layout_constraintTop_toBottomOf="@id/textViewMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Enter a url"
        android:inputType="text"
        android:drawableEnd="@drawable/clear"
        />
</androidx.constraintlayout.widget.ConstraintLayout>